test/scc_test/decl/semantic-errors/038.t
enum A
{
    B
};

union A
{
    int x;
};

